--- a/blurry-loading/index.html
+++ b/blurry-loading/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>My Project</title>
+  <title>Blurry Loading</title>
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+
+    <img src="https://images.unsplash.com/photo-1470770841072-f978cf4d019e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" alt="">
+    <div class="black"></div>
+
   <script src="script.js"></script>
 </body>
 
